Sri Sai Jr College complete site

--- a/Contact Us.html
+++ b/Contact Us.html
@@ -4,29 +4,79 @@
 </head>
 <body style="background-color:cornflowerblue;" >
     <style>
-        img{
+       img{
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width:85%;
+            width:100%;
             border:3px;
             border-radius:9px ;
             border-color: black;
         }
+        table, td, th {
+  border: 2px solid black;
+}
+
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th,tr {
+  text-align: center;
+  font-size:18px ;
+}
     </style>
     <img src="./Sri sai Jr clg.jpg">
     <br>
     <hr>
-    <ul>
-        <li><a href="./index.html">Home</a> </li>
-        <li><a href="./Departments.html">Departments</a> </li>
-        <li><a href="./Examination Branch.html">Examination Branch</a> </li>
-        <li><a href="./Student Support.html">Student Support</a> </li>
-        <li><a href="./Programms.html">Programms</a> </li>
-        <li><a href="./Contact Us.html">Contact Us</a> </li>
-        <li><a href="./About Us.html">About Us</a> </li> 
-    </ul>
-<br>
+    <nav style="text-align:center ;font-size:200%;">
+        <a href="./index.html">Home</a> |
+        <a href="./Departments.html">Departments</a> |
+        <a href="./Examination Branch.html">Examination Branch</a> |
+        <a href="./Student Support.html">Student Support</a> |
+        <a href="./Programms.html">Programms</a> |
+        <a href="./Contact Us.html">Contact Us</a> |
+        <a href="./About Us.html">About Us</a>
+    </nav>
 <hr>
+<br>
+<table>
+    <tr>
+    <th>Name</th>
+    <th>Contact No</th>
+    <th>Mail ID</th>
+</tr>
+
+    <tr>
+        <td>Bhavitha Sri - Founder</td>
+        <td>9876543210</td>
+        <td>ssjcfounder23@gmail.com</td>
+    </tr>
+    <tr>
+        <td>Balavardhan Reddy - Managing Director</td>
+        <td>9876543212</td>
+        <td>ssjcmanagingdirector88@gmail.com</td>
+    </tr>
+
+    <tr>
+        <td>Baby Liyanshi - Correspondent</td>
+        <td>9876543213</td>
+        <td>ssjccorrespondent73@gmail.com</td>
+    </tr>
+
+    <tr>
+        <td>Heera Sai - Principal</td>
+        <td>9876543214</td>
+        <td>ssjcprincipal983@gmail.com</td>
+    </tr>
+</table>
+
+<ul style="font-size:25px">
+    <label style="font-size:50px ;">Contact Us on...</label>
+    <li><a href="https://www.instagram.com/">SSJC Instagram</a></li>
+    <li><a href="https://www.facebook.com/">SSJC Facebook</a> </li>
+    <li><a href="https://reddy9870.github.io/Srisai--college/">SSJC Offical Site</a> </li>
+</ul>
 </body>
 </html>
