--- a/Examination Branch.html
+++ b/Examination Branch.html
@@ -8,7 +8,7 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width:85%;
+            width:100%;
             border:3px;
             border-radius:9px ;
             border-color: black;
@@ -16,7 +16,7 @@
        h3 {
   border: 5px solid red;
   border-radius: 30px;
-  padding: 25px;}
+  padding: 20px;}
   h1 {
   border: 2px solid black;
   border-radius: 25px;
@@ -28,20 +28,19 @@ margin:auto ;}
 <br>
 <hr>
 
-    <ul>
-        <li><a href="./index.html">Home</a> </li>
-        <li><a href="./Departments.html">Departments</a> </li>
-        <li><a href="./Examination Branch.html">Examination Branch</a> </li>
-        <li><a href="./Student Support.html">Student Support</a> </li>
-        <li><a href="./Programms.html">Programms</a> </li>
-        <li><a href="./Contact Us.html">Contact Us</a> </li>
-        <li><a href="./About Us.html">About Us</a> </li> 
-    </ul>
-    
-    <br>
+<nav style="text-align:center ;font-size:200%;">
+    <a href="./index.html">Home</a> |
+    <a href="./Departments.html">Departments</a> |
+    <a href="./Examination Branch.html">Examination Branch</a> |
+    <a href="./Student Support.html">Student Support</a> |
+    <a href="./Programms.html">Programms</a> |
+    <a href="./Contact Us.html">Contact Us</a> |
+    <a href="./About Us.html">About Us</a>
+</nav>
     <hr>
+    <br>
 
-    <h3 style="color:white;background-color:black;text-align: center;font-family:Georgia, 'Times New Roman', Times, serif;flex-flow:row;"> NOTIFICATIONS </h3>
+    <h3 style="color:white;background-color:black;text-align: center;font-family:Georgia, 'Times New Roman', Times, serif;flex-flow:row;font-size:30px;"> NOTIFICATIONS </h3>
 
     <h1 style="color:black;background-color:white;text-align: center;font-family:cursive;flex-flow:row;"> No new notifications are found...! </h1>
 
