--- a/Programms.html
+++ b/Programms.html
@@ -8,26 +8,80 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width:85%;
+            width:100%;
             border:3px;
             border-radius:9px ;
             border-color: black;
         }
+
+        h1 {
+  border: 2px solid black;
+  border-radius: 25px;
+  padding: 15px;
+  width: 50%;
+margin:auto ;}
     </style>
     <img src="./Sri sai Jr clg.jpg">
     <br>
     <hr>
-    <ul>
-        <li><a href="./index.html">Home</a> </li>
-        <li><a href="./Departments.html">Departments</a> </li>
-        <li><a href="./Examination Branch.html">Examination Branch</a> </li>
-        <li><a href="./Student Support.html">Student Support</a> </li>
-        <li><a href="./Programms.html">Programms</a> </li>
-        <li><a href="./Contact Us.html">Contact Us</a> </li>
-        <li><a href="./About Us.html">About Us</a> </li> 
-    </ul>
-<br>
+    <nav style="text-align:center ;font-size:200%;">
+        <a href="./index.html">Home</a> |
+        <a href="./Departments.html">Departments</a> |
+        <a href="./Examination Branch.html">Examination Branch</a> |
+        <a href="./Student Support.html">Student Support</a> |
+        <a href="./Programms.html">Programms</a> |
+        <a href="./Contact Us.html">Contact Us</a> |
+        <a href="./About Us.html">About Us</a>
+    </nav>
 <hr>
+<br>
+<h1 style="color:black;background-color:rgb(55, 202, 55);text-align: center;font-family:cursive;flex-flow:row;"> Bathukamma Festival Celebrations - 2022 </h1>
+<br>
+<style>
+    div.gallery{
+        float:left ;
+        width:33.33%;
+        padding:5px;
+        box-sizing: border-box;
+    }
+    div.gallery::backdrop{border: 1px aolid #777;}
+    div.gallery img{
+        width:90%;
+        height:60% ;
+    }
+</style>
 
+<div class="gallery">
+    <img src="./Bathukamma 0.jpg" alt="Bathukamma Festival" width="400" height="400">
+</div>
+<div class="gallery">
+    <img src="./Bathukamma 1.jpg" alt="Bathukamma Festival" width="400" height="400">
+</div>
+<div class="gallery">
+    <img src="./Bathukamma 3.jpg" alt="Bathukamma Festival" width="400" height="400">
+</div>
+<br><br>
+<hr>
+<br>
+
+<h1 style="color:black;background-color:rgb(55, 202, 55);text-align: center;font-family:cursive;flex-flow:row;"> Sports Day Celebrations - 2022 </h1>
+
+<br>
+
+<div class="gallery">
+    <img src="./sports day 0.jpg" alt="Sports Day Celebrations" width="400" height="400">
+</div>
+
+<div class="gallery">
+    <img src="./sports day 1.jpg" alt="Sports Day Celebrations" width="400" height="400">
+</div>
+
+<div class="gallery">
+    <img src="./sports day 2.jpg" alt="Sports Day Celebrations" width="400" height="400">
+</div>
+
+<div class="gallery">
+    <img src="./sports day 3.jpg" alt="Sports Day Celebrations" width="400" height="400">
+</div>
 </body>
 </html>
