--- a/Student Support.html
+++ b/Student Support.html
@@ -4,11 +4,11 @@
 </head>
 <body style="background-color:cornflowerblue;" >
     <style>
-        img{
+       img{
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width:85%;
+            width:100%;
             border:3px;
             border-radius:9px ;
             border-color: black;
@@ -17,18 +17,23 @@
     <img src="./Sri sai Jr clg.jpg">
     <br>
     <hr>
-    <ul>
-        <li><a href="./index.html">Home</a> </li>
-        <li><a href="./Departments.html">Departments</a> </li>
-        <li><a href="./Examination Branch.html">Examination Branch</a> </li>
-        <li><a href="./Student Support.html">Student Support</a> </li>
-        <li><a href="./Programms.html">Programms</a> </li>
-        <li><a href="./Contact Us.html">Contact Us</a> </li>
-        <li><a href="./About Us.html">About Us</a> </li> 
-    </ul>
+    <nav style="text-align:center ;font-size:200%;">
+        <a href="./index.html">Home</a> |
+        <a href="./Departments.html">Departments</a> |
+        <a href="./Examination Branch.html">Examination Branch</a> |
+        <a href="./Student Support.html">Student Support</a> |
+        <a href="./Programms.html">Programms</a> |
+        <a href="./Contact Us.html">Contact Us</a> |
+        <a href="./About Us.html">About Us</a>
+    </nav>
 <hr>
 <br>
+<h1 style="border: 3px solid black;border-radius: 20px;padding:5px ; text-align:center; font-size:30px;font-family: cursive;color: white;background-color: black;width:50%;margin-left:auto;margin-right: auto;text-decoration: underline;">Student Support Cell</h1>
 
+<ul>
+    <li style="font-size:30px ;"><a href="./Suggestions.html" >Suggestions</a></li>
+    <li style="font-size:30px" ><a href="./anti ragging.html" >Anti-Ragging Committe</a></li>
+</ul>
 
 
 </body>
