--- a/index.html
+++ b/index.html
@@ -8,11 +8,10 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width:85%;
+            width:100%;
             border:3px;
             border-radius:9px ;
             border-color: black;
-            
         }
     </style>
 
@@ -20,37 +19,58 @@
     <br>
 <hr>
 
-    <ul>
-        <li><a href="./index.html">Home</a> </li>
-        <li><a href="./Departments.html">Departments</a> </li>
-        <li><a href="./Examination Branch.html">Examination Branch</a> </li>
-        <li><a href="./Student Support.html">Student Support</a> </li>
-        <li><a href="./Programms.html">Programms</a> </li>
-        <li><a href="./Contact Us.html">Contact Us</a> </li>
-        <li><a href="./About Us.html">About Us</a> </li> 
-    </ul>
+<nav style="text-align:center ;font-size:200%;">
+    <a href="./index.html">Home</a> |
+    <a href="./Departments.html">Departments</a> |
+    <a href="./Examination Branch.html">Examination Branch</a> |
+    <a href="./Student Support.html">Student Support</a> |
+    <a href="./Programms.html">Programms</a> |
+    <a href="./Contact Us.html">Contact Us</a> |
+    <a href="./About Us.html">About Us</a>
+</nav>
     <hr>
     <br>
     <div>
-        <div style="border:3px solid black;border-radius:25px ; background-color: antiquewhite; position:absolute;left:10%; width:400px;height: 45%; padding:10px;text-indent:0.7cm;font: size 20px;font-family: cursive; ">
-           <p>Sri Sai Junior College was Established in the year 2021.The College started function from the academic year 2021-22.
+        <div style="border:3px solid black;border-radius:25px ; background-color: antiquewhite;height:fit-content; padding:7px;text-indent:0.9cm;font-size:20px;font-family: cursive; ">
+           <p>Sri Sai Junior College was Established in the year 2022.The College started functioning from the academic year 2022-23.
             As we move towards becoming a developed nation, the role of youth of the country, becomes increasingly important.</p>
             <p>
             We strongly belive that education is the only wepon to change the world, so we server our best to the Students to reach their dreams. Here we bulid their starting future as strong as their servive in their lifes to achive success.
         </p>
         </div>
-
-        <div style="border:3px solid black;border-radius:15px ; background-color: antiquewhite; position:absolute;right: 10% ; width:400px;height: 45%; padding:10px; ">
-            <style>
-                img{
-                    display: block;
-                    margin: left 0;;
-                    margin: right 0;;
-                    width:102%;
-                }
-            </style>
-            <img src="./Principal.png" >
+        <br>
+        <div>
+            <p style="border: 3px solid black;border-radius: 20px;padding:5px ; text-align:center; font-size:30px;font-family: cursive;color: white;background-color: black;width:50%;margin-left:auto;margin-right: auto;text-decoration: underline;">Our Mission and Vission</p>
         </div>
+        <div>
+            <ul>
+                <style>
+                    li{
+                        font-size:25px;
+                        font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+                        font-style: italic;
+                    }
+                </style>
+                <label><span style="color:white;font-size: xx-large ;font-family: serif;font-weight: bold;border-bottom: 2px solid black; ">Vission</span></label>
+
+                <li>To provide quality education.</li>
+                <li>To Achieve Academic Excellence.</li>
+                <li>To Prepare the Students and staff to meet the Global needs of Industry and Society.</li>
+
+                <label><span style="color:white;font-size: xx-large ;font-family: serif;font-weight: bold;border-bottom: 2px solid black;">Mission</span></label>
+
+                <li>To Mould the Students to achieve 100% Employability in future.</li>
+                <li>To Achieve Deemed University Status & Self Sufficiency</li>
+                <li>To Include Ethical & Moral values - based Educational System in the institution.</li>
+
+                <label><span style="color:white;font-size: xx-large ;font-family: serif;font-weight: bold;border-bottom: 2px solid black; ">Quality Policy</span></label>
+
+                <li>The Institue is committed to Academic Excellence and Overall Personality Development of the Students.</li>
+                <li>To Adopt innovative techniques in feedback practices for achieving continual improvement.</li>
+                <li>To Imbibe ethical practices among staff and students creating social awareness and responsibility.</li>
+            </ul>
+        </div>
+
     </div>
 </body>
 </html>
