--- a/About Us.html
+++ b/About Us.html
@@ -2,31 +2,76 @@
 <head>
     <title>ABOUT US</title>
 </head>
-<body style="background-color:cornflowerblue;" >
+<body style="background-color:rgb(189, 105, 161);" >
     <style>
         img{
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width:85%;
+            width:100%;
             border:3px;
             border-radius:9px ;
-            border-color: black;}
+            border-color: black;
+        }
     </style>
     <img src="./Sri sai Jr clg.jpg">
     <br>
     <hr>
-    <ul>
-        <li><a href="./index.html">Home</a> </li>
-        <li><a href="./Departments.html">Departments</a> </li>
-        <li><a href="./Examination Branch.html">Examination Branch</a> </li>
-        <li><a href="./Student Support.html">Student Support</a> </li>
-        <li><a href="./Programms.html">Programms</a> </li>
-        <li><a href="./Contact Us.html">Contact Us</a> </li>
-        <li><a href="./About Us.html">About Us</a> </li> 
-    </ul>
-<br>
+    <br>
+    <nav style="text-align:center ;font-size:200%; ">
+        <a href="./index.html">Home</a> |
+        <a href="./Departments.html">Departments</a> |
+        <a href="./Examination Branch.html">Examination Branch</a> |
+        <a href="./Student Support.html">Student Support</a> |
+        <a href="./Programms.html">Programms</a> |
+        <a href="./Contact Us.html">Contact Us</a> |
+        <a href="./About Us.html">About Us</a>
+    </nav>
 <hr>
+<br>
+<h1 style="margin:auto;text-align: center;font-size:300%;font-style: italic;border: 1px; ">Our Amazing Team</h1>
+<br>
+
+<style>
+    div.gallery{
+        float:left ;
+        width:33.33%;
+        padding:5px;
+        box-sizing: border-box;
+    }
+    div.gallery::backdrop{border: 1px aolid #777;}
+    div.gallery img{
+        width:100%;
+    }
+</style>
+
+<div class="gallery">
+    <img src="./Bhavitha Sri.png" alt="Founder" width="600" height="400">
+</div>
+<div class="gallery">
+    <img style="float:left ;" src="./Balavardhan Reddy.png" alt="Managing Director" width="600" height="400">
+</div>
+<div class="gallery">
+    <img src="./Principal.png" alt="Correspondent" width="600" height="400">
+</div>
+<div class="gallery">
+    <img src="./Heerasai.png" alt="Principal" width="600" height="400">
+</div>
+<div class="gallery">
+    <img src="./Abhinaya Reddy.png" alt="BiPC HOD" width="600" height="400">
+</div>
+<div class="gallery">
+    <img src="./Shobha.png" alt="MPC HOD" width="600" height="400">
+</div>
+<div class="gallery">
+    <img src="./Bhargav Reddy.png" alt="MEC HOD" width="600" height="400">
+</div>
+<div class="gallery">
+    <img src="./Krishna.png" alt="CEC HOD" width="600" height="400">
+</div>
+<div class="gallery">
+    <img src="./Rajesh.png" alt="HEC HOD" width="600" height="400">
+</div>
 
 </body>
 </html>
