--- a/Departments.html
+++ b/Departments.html
@@ -8,7 +8,7 @@
             display: block;
             margin-left: auto;
             margin-right: auto;
-            width:85%;
+            width:100%;
             border:3px;
             border-radius:9px ;
             border-color: black;
@@ -29,15 +29,15 @@ th,tr {
     <img src="./Sri sai Jr clg.jpg">
     <br>
     <hr>
-    <ul>
-        <li><a href="./index.html">Home</a> </li>
-        <li><a href="./Departments.html">Departments</a> </li>
-        <li><a href="./Examination Branch.html">Examination Branch</a> </li>
-        <li><a href="./Student Support.html">Student Support</a> </li>
-        <li><a href="./Programms.html">Programms</a> </li>
-        <li><a href="./Contact Us.html">Contact Us</a> </li>
-        <li><a href="./About Us.html">About Us</a> </li> 
-    </ul>
+    <nav style="text-align:center ;font-size:200%;">
+        <a href="./index.html">Home</a> |
+        <a href="./Departments.html">Departments</a> |
+        <a href="./Examination Branch.html">Examination Branch</a> |
+        <a href="./Student Support.html">Student Support</a> |
+        <a href="./Programms.html">Programms</a> |
+        <a href="./Contact Us.html">Contact Us</a> |
+        <a href="./About Us.html">About Us</a>
+    </nav>
 <hr>
 <br>
 <h1 style="font-family:fantasy;text-align: center; "> Currently we are Provided the followings Courses...</h1>
@@ -54,13 +54,13 @@ th,tr {
         <tr>
             <td>BiPC</td>
             <td>Both EM & TM</td>
-            <td>Mr.K.Krishna</td>
+            <td>Ms.Abhinaya Reddy</td>
             <td>9876762509</td>
         </tr>
         <tr>
             <td>MPC</td>
             <td>Both EM & TM</td>
-            <td>Mr.Rajesh</td>
+            <td>Ms.Shobha</td>
             <td>8979072509</td>
         </tr>
         <tr>
@@ -72,13 +72,13 @@ th,tr {
         <tr>
             <td>CEC</td>
             <td>Both EM & TM</td>
-            <td>Ms.Sunitha</td>
+            <td>Mr.K.Krishna</td>
             <td>9133412175</td>
         </tr>
         <tr>
             <td>HEC</td>
             <td>TM</td>
-            <td>Ms.Kalyani </td>
+            <td>Mr.Rajesh</td>
             <td>7885641227</td>
         </tr>
 </table>
